--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,10 +11,73 @@ html, body {
   font-family: "Montserrat", sans-serif;
   background: #0f0f0f;
   color: #fff;
+  font-size: 100%;
+  font-weight: 400;
+  line-height: 1.5;
+}
+@media (max-width: 1024px) {
+  html, body {
+    font-size: 80%;
+  }
+}
+@media (max-width: 600px) {
+  html, body {
+    font-size: 60%;
+    margin-bottom: 3rem;
+  }
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+@media (hover: hover) {
+  a:hover {
+    color: #ff0000;
+  }
+}
+button input, input input {
+  outline: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+iframe {
+  border: 0;
+}
+
+.container {
+  max-width: 1660px;
+  margin: auto;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.section {
+  padding: 0 2rem;
+}
+
+.section__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }/*# sourceMappingURL=index.css.map */
