--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,13 +1,75 @@
 @use '../abstracts' as *;
 
 html, body {
-    font-family: $font;
-    background: $body-bg;
-    color: $white;
+  font-family: $font;
+  background: $body-bg;
+  color: $txt-color;
+  font-size: 100%;
+  font-weight: 400;
+  line-height: 1.5;
+
+  @include responsive(tablet) {
+    font-size: 80%;
+  }
+
+  @include responsive(mobile) {
+    font-size: 60%;
+    margin-bottom: 3rem;
+  }
+    
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+@media(hover: hover ){
+  a:hover {
+    color: $main-color;
+  }
+}
+
+button, input {
+    outline: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+iframe {
+  border: 0;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.section {
+  padding: 0 2rem;
+}
+
+.section__header {
+  @include flex(center, space-between);
+}
+
+.container {
+  max-width: 1660px;
+  margin: auto;
 }
