--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -5,3 +5,6 @@
 @forward './modal';
 @forward './movie-list';
 @forward './movie-card';
+@forward './page-header';
+@forward './movie-grid';
+@forward './input';
