--- a/src/scss/components/_movie-card.scss
+++ b/src/scss/components/_movie-card.scss
@@ -16,6 +16,7 @@
         transform: translate(-50%, -50%) scale(0);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         @include flex(center, center);
+        height: 2.5rem;
 
         svg {
             color: white;
@@ -34,6 +35,8 @@
         opacity: 0;
         transition: opacity 0.3s ease;
         border-radius: $border-radius;
+        width: 100%;
+        height: 100%;
     }
 
     @media (hover: hover) and (pointer: fine) {
@@ -44,5 +47,9 @@
         &:hover .btn {
             transform: translate(-50%, -50%) scale(1);
         }
+    }
+
+    &__title {
+        font-size: 1.2rem;
     }
 }
