--- a/src/css/index.css
+++ b/src/css/index.css
@@ -83,6 +83,175 @@ iframe {
   margin: auto;
 }
 
+/* Pages */
+/* abstracts */
+.banner {
+  height: 50vh;
+  position: relative;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media (max-width: 1024px) {
+  .banner {
+    height: 40rem;
+    margin-bottom: 4rem;
+  }
+}
+.banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.banner::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to top, #0f0f0f, rgba(0, 0, 0, 0));
+}
+
+.movie-content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  max-width: 1260px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -16rem;
+  position: relative;
+  padding: 0 2rem;
+}
+@media (max-width: 600px) {
+  .movie-content {
+    width: 100%;
+    margin-top: -25rem;
+  }
+}
+.movie-content__poster {
+  flex: 1;
+}
+@media (max-width: 600px) {
+  .movie-content__poster {
+    display: none;
+  }
+}
+.movie-content__poster__img {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 20px;
+  padding-top: 160%;
+  margin-bottom: 2rem;
+}
+.movie-content__info {
+  width: 70%;
+  padding-left: 2rem;
+  position: relative;
+}
+@media (max-width: 600px) {
+  .movie-content__info {
+    width: 100%;
+    padding-left: 0;
+  }
+}
+.movie-content__info > * {
+  margin-bottom: 1rem;
+}
+.movie-content__info__title {
+  font-size: 4rem;
+  line-height: 1;
+}
+.movie-content__info__genres {
+  display: flex;
+  align-items: start;
+  justify-content: start;
+}
+.movie-content__info__genres > * ~ * {
+  margin-left: 0.5rem;
+}
+.movie-content__info__genres--item {
+  padding: 0.5rem 1.5rem;
+  border: 2px solid #fff;
+  border-radius: 20px;
+  font-size: 0.8rem;
+  font-weight: 600;
+  background-color: #0f0f0f;
+}
+@media (max-width: 1024px) {
+  .movie-content__info__genres--item {
+    margin: 1rem 1rem 0 0;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 1024px) {
+  .movie-content__info__genres {
+    flex-wrap: wrap;
+  }
+}
+.movie-content__info__overview {
+  font-size: 1rem;
+}
+@media (max-width: 600px) {
+  .movie-content__info__overview {
+    font-size: 1.2rem;
+  }
+}
+.movie-content__info__cast--header {
+  margin-bottom: 0.5rem;
+}
+@media (max-width: 600px) {
+  .movie-content__info__cast--header {
+    font-size: 1.5rem;
+  }
+}
+.movie-content__info__cast--similar {
+  font-size: 2rem;
+}
+
+.cast {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  gap: 10px;
+}
+@media (max-width: 600px) {
+  .cast {
+    grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+  }
+}
+.cast__item__img {
+  padding-top: 160px;
+  background-size: cover;
+  margin-bottom: 0.5rem;
+  border-radius: 5px;
+}
+.cast__item__name {
+  font-size: 0.8rem;
+}
+@media (max-width: 600px) {
+  .cast__item__name {
+    font-size: 1rem;
+  }
+}
+
+.video {
+  margin-bottom: 3rem;
+}
+.video__title {
+  margin-bottom: 1.5rem;
+}
+@media (max-width: 600px) {
+  .video__title {
+    font-size: 1rem;
+  }
+}
+
 /* components */
 /* abstracts */
 .header {
@@ -179,6 +348,49 @@ iframe {
 }
 
 /* abstracts */
+.footer {
+  position: relative;
+  padding: 6rem 2rem;
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.footer__content {
+  width: 100%;
+}
+.footer__content__logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 3rem;
+}
+.footer__content__logo--logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: 600;
+}
+.footer__content__logo--logo img {
+  margin-right: 1rem;
+}
+.footer__content__menus {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.footer__content__menus--menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.footer__content__menus--menu > * ~ * {
+  margin-top: 1rem;
+}
+
 /* abstracts */
 .btn {
   margin-top: 1rem;
@@ -187,7 +399,7 @@ iframe {
   border: 4px solid transparent;
   background-color: #ff0000;
   color: #fff;
-  border-radius: 30px;
+  border-radius: 20px;
   padding: 0.5rem 1.8rem;
   font-size: 1.5rem;
   font-weight: 600;
@@ -209,7 +421,7 @@ iframe {
   margin-left: 1rem;
   padding: 0.5rem 1.8rem;
   font-size: 1.5rem;
-  border-radius: 30px;
+  border-radius: 20px;
   font-weight: 600;
   border: 3px solid #fff;
   background-color: transparent;
@@ -234,12 +446,17 @@ iframe {
 }
 .hero-slide__item {
   padding: 5rem 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   position: relative;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+@media (max-width: 1024px) {
+  .hero-slide__item {
+    height: 40rem;
+    margin-bottom: 4rem;
+  }
 }
 .hero-slide__item::before {
   content: "";
@@ -250,11 +467,21 @@ iframe {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
 }
+.hero-slide__item::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to top, #0f0f0f, rgba(0, 0, 0, 0));
+}
 .hero-slide__item__content {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
+  z-index: 10;
 }
 .hero-slide__item__content__info {
   width: 50%;
@@ -262,7 +489,8 @@ iframe {
 }
 @media (max-width: 1024px) {
   .hero-slide__item__content__info {
-    width: 100%;
+    margin-top: 6rem;
+    width: 80%;
   }
 }
 .hero-slide__item__content__info > * ~ * {
@@ -276,12 +504,17 @@ iframe {
 }
 @media (max-width: 1024px) {
   .hero-slide__item__content__info--title {
-    font-size: 2rem;
+    font-size: 3rem;
   }
 }
 .hero-slide__item__content__info--overview {
   width: 90%;
   font-weight: 500;
+}
+@media (max-width: 1024px) {
+  .hero-slide__item__content__info--overview {
+    font-size: 1.3rem;
+  }
 }
 .hero-slide__item__content__poster {
   display: flex;
@@ -290,7 +523,7 @@ iframe {
 }
 .hero-slide__item__content__poster img {
   width: 400px;
-  border-radius: 30px;
+  border-radius: 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 @media (max-width: 1024px) {
@@ -350,7 +583,20 @@ iframe {
 
 /* abstracts */
 .movie-list .swiper-slide {
+  padding-top: 20px;
   width: 15%;
+  border-radius: 20px;
+  margin-left: 10px;
+}
+@media (max-width: 1024px) {
+  .movie-list .swiper-slide {
+    width: 30%;
+  }
+}
+@media (max-width: 600px) {
+  .movie-list .swiper-slide {
+    width: 40%;
+  }
 }
 
 /* abstracts */
@@ -360,7 +606,7 @@ iframe {
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 160%;
-  border-radius: 30px;
+  border-radius: 20px;
   margin-bottom: 1rem;
 }
 .movie-card__btn {
@@ -372,6 +618,7 @@ iframe {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 2.5rem;
 }
 .movie-card__btn svg {
   color: white;
@@ -387,7 +634,9 @@ iframe {
   background-color: #000;
   opacity: 0;
   transition: opacity 0.3s ease;
-  border-radius: 30px;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
 }
 @media (hover: hover) and (pointer: fine) {
   .movie-card:hover::before {
@@ -396,4 +645,80 @@ iframe {
   .movie-card:hover .btn {
     transform: translate(-50%, -50%) scale(1);
   }
+}
+.movie-card__title {
+  font-size: 1.2rem;
+}
+
+/* abstracts */
+.page-header {
+  padding: 8rem 0 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  position: relative;
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.page-header h2 {
+  position: relative;
+  z-index: 99;
+}
+.page-header::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to top, #0f0f0f, rgba(0, 0, 0, 0));
+}
+
+/* abstracts */
+.movie-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  margin-bottom: 3rem;
+}
+@media (max-width: 1024px) {
+  .movie-grid {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
+}
+.movie-grid__loadmore {
+  text-align: center;
+}
+
+.movie-search {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+}
+.movie-search input {
+  width: 100%;
+  padding-right: 8rem;
+}
+.movie-search button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 0;
+  opacity: 0.8;
+  height: 2.125rem;
+}
+.movie-search button:hover {
+  opacity: 1;
+}
+
+/* abstracts */
+input {
+  border: 0;
+  background-color: #000;
+  padding: 0.5rem 1.5rem;
+  font-size: 1rem;
+  border-radius: 20px;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  margin-right: 1rem;
 }/*# sourceMappingURL=index.css.map */
