--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -53,6 +53,10 @@ iframe {
   border: 0;
 }
 
+h2 {
+  font-size: 1.2rem;
+}
+
 .mb-3 {
   margin-bottom: 3rem;
 }
@@ -73,3 +77,4 @@ iframe {
   max-width: 1660px;
   margin: auto;
 }
+
