--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -40,6 +40,10 @@
                     flex-direction: column;
                 }
             }
+
+            a {
+                cursor: pointer;
+            }
         }
 
     }
